Fixing overflow on tables WIP

--- a/BlazorApp/Pages/Errors.razor.css
+++ b/BlazorApp/Pages/Errors.razor.css
@@ -2,3 +2,7 @@
     margin: 2.5%;
     align-items: center;
 }
+
+.inner_error_reconciliation_table_formatting {
+
+}
